<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Two_Mode">

    <TextView
        android:id="@+id/scoretxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstscoretxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/player_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoretxt" />

    <TextView
        android:id="@+id/botscoretxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/o_player_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstscoretxt" />

    <TextView
        android:id="@+id/onescoretxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/firstscoretxt"
        app:layout_constraintTop_toTopOf="@+id/firstscoretxt" />

    <TextView
        android:id="@+id/bscoretxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="@+id/onescoretxt"
        app:layout_constraintTop_toTopOf="@+id/botscoretxt" />

    <TextView
        android:id="@+id/gridtxt00"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#3B050505"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gridtxt01"
        app:layout_constraintEnd_toEndOf="@+id/gridtxt10" />

    <TextView
        android:id="@+id/gridtxt01"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#19000000"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridtxt11"
        app:layout_constraintEnd_toEndOf="@+id/gridtxt11"
        app:layout_constraintStart_toEndOf="@+id/gridtxt10" />

    <TextView
        android:id="@+id/gridtxt02"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#3B050505"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gridtxt01"
        app:layout_constraintStart_toEndOf="@+id/gridtxt11" />

    <TextView
        android:id="@+id/gridtxt10"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#19000000"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gridtxt11"
        app:layout_constraintEnd_toStartOf="@+id/gridtxt11"
        app:layout_constraintTop_toBottomOf="@+id/gridtxt01" />

    <TextView
        android:id="@+id/gridtxt11"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#3B050505"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gridtxt12"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#19000000"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gridtxt11"
        app:layout_constraintTop_toBottomOf="@+id/gridtxt01" />

    <TextView
        android:id="@+id/gridtxt21"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#19000000"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/gridtxt11"
        app:layout_constraintStart_toEndOf="@+id/gridtxt10"
        app:layout_constraintTop_toBottomOf="@+id/gridtxt11" />

    <TextView
        android:id="@+id/gridtxt22"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#3B050505"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gridtxt11"
        app:layout_constraintTop_toBottomOf="@+id/gridtxt11" />

    <TextView
        android:id="@+id/gridtxt20"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="#3B050505"
        android:fontFamily="casual"
        android:onClick="playox"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/gridtxt10"
        app:layout_constraintTop_toBottomOf="@+id/gridtxt11" />

    <TextView
        android:id="@+id/turnoxtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/turn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botscoretxt" />

    <TextView
        android:id="@+id/turnox1txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="O"
        app:layout_constraintStart_toStartOf="@+id/bscoretxt"
        app:layout_constraintTop_toTopOf="@+id/turnoxtxt" />

    <Button
        android:id="@+id/againbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="Reset"
        android:text="@string/again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridtxt21" />

</androidx.constraintlayout.widget.ConstraintLayout>